[BER-2022] Add fiberplane BV as platinum sponsor

--- a/data/events/2022-berlin.yml
+++ b/data/events/2022-berlin.yml
@@ -112,6 +112,8 @@ sponsors:
     level: platinum
   - id: emnify
     level: gold
+  - id: fiberplane
+    level: platinum
 
 
 sponsors_accepted : "yes" # Whether you want "Become a XXX Sponsor!" link
